syntax = "proto3";

import "protos/inferrequest.proto";
import "protos/inferresult.proto";

service InferenceService {
    rpc Infer (InferRequest) returns (InferResult) {}
}

